Added separate stylesheet with CSS reset

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="jquery.js"></script>
     <script src="data_generator.js"></script>
     <script src ="application.js"></script>
+    <link href="styles.css" rel="stylesheet">
   </head>
   <body>
   </body>
